# imageresize

./: .gitignore  Cargo.toml  README.md  default.nix  imageresize.py
src/: main.rs
