[package]
name = "imageresize"
version = "0.2.1"
authors = ["Christian Kauhaus <christian@kauhaus.de>"]
description = "Handy tool for reducing masses of JPEG files to resonable file sizes."
edition = "2018"
readme = "README.md"
license = "BSD-3-Clause"
# tested with Rust 1.34

[dependencies]
atty = "0.2"
clap = { version = "2.32", features = ["wrap_help"] }
colored = "1.8"
mozjpeg = "0.8"
rayon = "1.0"
rexiv2 = "0.7"
snafu = { version = "0.3", features = ["rust_1_30"] }

[dependencies.image]
version = "0.21"
default-features = false
features = ["gif_codec", "jpeg", "png_codec", "pnm", "webp", "jpeg_rayon"]
